--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <img src="./my pic.jpg" height="200" alt="profile picture" />
         <h2>Qualities</h2>
         <ul>
-            <li>I am a firm determine person and hardworking person.</li>
-            <li>I always belive in hardwork rather than luck.</li>
+            <li>I am a firm determine and hardworking person.</li>
+            <li>I always believe in hardwork rather than luck.</li>
         </ul>
         <hr />
         <h2>Qualification</h2>
